--- a/restaurant/css/global.css
+++ b/restaurant/css/global.css
@@ -9,3 +9,11 @@ html {
     font-size: 62.5%;
     font-family: "Poppins", sans-serif;
 }
+
+body.menuIsOpen {
+    overflow: hidden;
+}
+
+body.menuIsOpen .mobile-links{
+    
+}
